# ReadingFlow

./: README.md  ReadingFlow.sln  angular.json  karma.conf.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ReadingFlow/: Form1.Designer.cs  Form1.cs  Program.cs  ReadingFlow.csproj
ReadingFlow/Const/: Folders.cs
ReadingFlow/Entity/: ReadingEntry.cs
ReadingFlow/Model/: Flow.cs  OutputReadingList.cs
ReadingFlow/ModelView/: FlowView.cs
app/: backend.js  backend.ts  context-menu.js  context-menu.ts  core.js  core.ts  db.ts  devtools.ts  dialogs.js  dialogs.ts  files.js  files.ts  first-run.ts  interfaces.js  interfaces.ts  ipc.js  ipc.ts  main.ts  menu.js  menu.ts  package-lock.json  package.json  protocol.ts  test.js  test.ts  windows.js  windows.ts
app/shared/: ipc-events.js  ipc-events.ts
lib-js/: file-node.ts  file-purejs.ts  functionA.ts  order.ts  package-lock.json  package.json  prisma-mock.js  prisma-mock.ts  rflib.ts
lib-js/tests/: file.test.ts  test-consts.ts  test.test.ts
src/: index.html  styles.scss  tsconfig.app.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: handlers.rs  main.rs
src-tauri/src/commands/: run.rs
src-tauri/src/file/: mod.rs
src-tauri/src/utils/: mod.rs  portpicker.rs
src/app/: ROUTES.ts  app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
src/app/consts/: backend-config.ts  components.ts  file-dialog-filters.ts  global-shortcuts.ts  hub-instruction.ts  hub-message.ts  item-display-modes.ts  item-operations.ts  item-types.ts  os-types.ts  program-type.ts  (+5 more)
(+268 files in other folders)
